[tool.poetry]
name = "DA-pandas"
version = "0.1.0"
description = ""
authors = ["Nizar Alsaeed <nizar.ayman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
